[package]
name = "phasst_lib"
version = "0.1.0"
authors = ["wheaton5 <whheaton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.1"
fnv = "1.0.6"
flate2 = "*"
itertools = "*"
rayon = "*"
byteorder = "*"
disjoint-set = "*"
